# public/swagger.json
@@ -7,6 +7,7 @@
 		"responses": {},
 		"schemas": {
 			"DataResponse": {
+				"description": "Data returned by the Discord API",
 				"properties": {
 					"id": {
 						"type": "number",
@@ -59,9 +60,56 @@
 				"additionalProperties": false
 			},
 			"LookupResponse": {
+				"description": "Data returned by the API",
 				"properties": {
 					"success": {
 						"type": "boolean"
+					},
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"$ref": "#/components/schemas/DataResponse"
+					}
+				},
+				"required": [
+					"success",
+					"message",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ErrorResponse": {
+				"description": "Error response",
+				"properties": {
+					"success": {
+						"type": "boolean",
+						"enum": [
+							false
+						],
+						"nullable": false
+					},
+					"message": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"success",
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ErrorLookupResponse": {
+				"description": "Error returned by the API",
+				"properties": {
+					"success": {
+						"type": "boolean",
+						"enum": [
+							false
+						],
+						"nullable": false
 					},
 					"message": {
 						"type": "string"
@@ -99,7 +147,7 @@
 				"operationId": "GetUserByID",
 				"responses": {
 					"200": {
-						"description": "Ok",
+						"description": "User found",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -107,12 +155,54 @@
 								}
 							}
 						}
+					},
+					"400": {
+						"description": "No query provided",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "User not found",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorLookupResponse"
+								}
+							}
+						}
+					},
+					"406": {
+						"description": "ID must be a number",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
+					"411": {
+						"description": "ID must be 15 characters long",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
 					}
 				},
+				"description": "Get a Discord user by his ID",
 				"security": [],
 				"parameters": [
 					{
-						"in": "path",
+						"description": "Discord user ID",
+						"in": "query",
 						"name": "id",
 						"required": true,
 						"schema": {
